--- a/WebExam/src/main/resources/application.yml
+++ b/WebExam/src/main/resources/application.yml
@@ -2,9 +2,9 @@
 spring:
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
-    url: "jdbc:mysql://localhost:3306/my-doc?useSSL=false&createDatabaseIfNotExist=true&serverTimezone=UTC"
+    url: "jdbc:mysql://localhost:3307/my-doc?useSSL=false&createDatabaseIfNotExist=true&serverTimezone=UTC&allowPublicKeyRetrieval=true"
     username: root
-    password:
+    password: secret
   sql:
     init:
       mode: always
